# uavcoop

./: CMakeLists.txt  README.md  compile_launch_uavcoop.sh
configs_20250328_1453_FlairGCS/: simulator.xml  uav_0.xml
simulator/: CMakeLists.txt
simulator/resources/core2-64/: output.csv  output.xlsx  output2.csv  simulator_uav_ugv.sh  simulator_uav_ugv.xml  simulator_x4.sh  simulator_x4.xml  simulator_x8.sh  x4.flair
simulator/src/: ArenaGround.cpp  ArenaGround.h  FourWheelRobot.cpp  FourWheelRobot.h  main.cpp
uav/: CMakeLists.txt
uav/resources/armv5te/: uavcoop_minidrones.sh
uav/resources/armv7a-neon/: uavcoop_ardrone2.sh  uavcoop_ardrone2.xml  uavcoop_bebop.sh  uavcoop_hdsx8.sh
uav/resources/core2-64/: x4.sh  x4_intelaero.sh  x8.sh
uav/src/: TimerThread.cpp  TimerThread.h  Trajectory.cpp  UavNavigation.cpp  UavNavigation.h  main.cpp  read_csv.cpp  read_csv.h  test_fleet.cpp  test_fleet.h
uav/src/state_machine/: UavStateMachine.cpp  UavStateMachine.h
uav/src/streaming/: ImageStreamer.cpp  ImageStreamer.h  ServerTCP.cpp  ServerTCP.h  Streaming.cpp  Streaming.h  StreamingFilter.cpp  StreamingFilter.h  TcpSocket.cpp  TcpSocket.h  VisionFilter.cpp  VisionFilter.h
uav/src/tcp_command/: CommandServer.cpp  CommandServer.h
ugv/: CMakeLists.txt
ugv/resources/core2-64/: ugv_simu.sh  ugv_sumo.sh
ugv/src/: UgvNavigation.cpp  UgvNavigation.h  main.cpp
ugv/src/tcp_command/: CommandServerUGV.cpp  CommandServerUGV.h
ugv/src/tcp_optitrack/: optitrack_server.cpp  optitrack_server.h
ugv/src/tcp_rec_command/: tcp_rec_command_server.cpp  tcp_rec_command_server.h
